<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="60dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="401dp"
                android:layout_height="232dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/delay" />

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rbNormal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="true"
                                android:onClick="onClickDelay"
                                android:text="@string/delayNormal" />

                            <RadioButton
                                android:id="@+id/rbUI"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="onClickDelay"
                                android:text="@string/delayUI" />

                            <RadioButton
                                android:id="@+id/rbGame"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="onClickDelay"
                                android:text="@string/delayGame" />

                            <RadioButton
                                android:id="@+id/rbFastest"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="onClickDelay"
                                android:text="@string/delayFastest" />

                        </RadioGroup>
                    </LinearLayout>

                    <Button
                        android:id="@+id/button"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="142dp"
                        android:layout_height="91dp"
                        android:baselineAligned="false"
                        android:onClick="onClick"
                        android:text="@string/buttonStart"
                        tools:layout_editor_absoluteX="161dp"
                        tools:layout_editor_absoluteY="258dp"
                        tools:layout_marginLeft="70dp"
                        tools:layout_marginTop="30dp" />

                </LinearLayout>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="85dp">

            <Button
                android:id="@+id/bShowSensors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onShowSensors"
                android:text="@string/buttonShowSensors" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.449"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.207" />
        </TableRow>


    </TableLayout>

</android.support.constraint.ConstraintLayout>